@@ -61,7 +61,7 @@ public class HashPrefixStatementRewriter implements StatementRewriter
         if (stmt == null) {
             try {
                 stmt = parseString(sql);
-                cache.putIfAbsent(sql, stmt);
+                cache.put(sql, stmt);
             }
             catch (IllegalArgumentException e) {
                 throw new UnableToCreateStatementException("Exception parsing for named parameter replacement", e, ctx);
