@@ -13,6 +13,7 @@
   - Eagerly check return type of @SqlUpdate annotated SqlObject methods
   - Allow getting generated keys by name for Oracle
   - Allow getting generated keys from prepared Batch statements
+  - Cache StatementRewriter parsing of statements
 
 2.63
   - Include lambda-friendly callback methods on Handle and DBI, #156
